퍼셉트론 클래스 추가

--- a/01.ipynb
+++ b/01.ipynb
@@ -51,185 +51,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[1.4, 0.2],\n",
-       "        [1.4, 0.2],\n",
-       "        [1.3, 0.2],\n",
-       "        [1.5, 0.2],\n",
-       "        [1.4, 0.2],\n",
-       "        [1.7, 0.4],\n",
-       "        [1.4, 0.3],\n",
-       "        [1.5, 0.2],\n",
-       "        [1.4, 0.2],\n",
-       "        [1.5, 0.1],\n",
-       "        [1.5, 0.2],\n",
-       "        [1.6, 0.2],\n",
-       "        [1.4, 0.1],\n",
-       "        [1.1, 0.1],\n",
-       "        [1.2, 0.2],\n",
-       "        [1.5, 0.4],\n",
-       "        [1.3, 0.4],\n",
-       "        [1.4, 0.3],\n",
-       "        [1.7, 0.3],\n",
-       "        [1.5, 0.3],\n",
-       "        [1.7, 0.2],\n",
-       "        [1.5, 0.4],\n",
-       "        [1. , 0.2],\n",
-       "        [1.7, 0.5],\n",
-       "        [1.9, 0.2],\n",
-       "        [1.6, 0.2],\n",
-       "        [1.6, 0.4],\n",
-       "        [1.5, 0.2],\n",
-       "        [1.4, 0.2],\n",
-       "        [1.6, 0.2],\n",
-       "        [1.6, 0.2],\n",
-       "        [1.5, 0.4],\n",
-       "        [1.5, 0.1],\n",
-       "        [1.4, 0.2],\n",
-       "        [1.5, 0.2],\n",
-       "        [1.2, 0.2],\n",
-       "        [1.3, 0.2],\n",
-       "        [1.4, 0.1],\n",
-       "        [1.3, 0.2],\n",
-       "        [1.5, 0.2],\n",
-       "        [1.3, 0.3],\n",
-       "        [1.3, 0.3],\n",
-       "        [1.3, 0.2],\n",
-       "        [1.6, 0.6],\n",
-       "        [1.9, 0.4],\n",
-       "        [1.4, 0.3],\n",
-       "        [1.6, 0.2],\n",
-       "        [1.4, 0.2],\n",
-       "        [1.5, 0.2],\n",
-       "        [1.4, 0.2],\n",
-       "        [4.7, 1.4],\n",
-       "        [4.5, 1.5],\n",
-       "        [4.9, 1.5],\n",
-       "        [4. , 1.3],\n",
-       "        [4.6, 1.5],\n",
-       "        [4.5, 1.3],\n",
-       "        [4.7, 1.6],\n",
-       "        [3.3, 1. ],\n",
-       "        [4.6, 1.3],\n",
-       "        [3.9, 1.4],\n",
-       "        [3.5, 1. ],\n",
-       "        [4.2, 1.5],\n",
-       "        [4. , 1. ],\n",
-       "        [4.7, 1.4],\n",
-       "        [3.6, 1.3],\n",
-       "        [4.4, 1.4],\n",
-       "        [4.5, 1.5],\n",
-       "        [4.1, 1. ],\n",
-       "        [4.5, 1.5],\n",
-       "        [3.9, 1.1],\n",
-       "        [4.8, 1.8],\n",
-       "        [4. , 1.3],\n",
-       "        [4.9, 1.5],\n",
-       "        [4.7, 1.2],\n",
-       "        [4.3, 1.3],\n",
-       "        [4.4, 1.4],\n",
-       "        [4.8, 1.4],\n",
-       "        [5. , 1.7],\n",
-       "        [4.5, 1.5],\n",
-       "        [3.5, 1. ],\n",
-       "        [3.8, 1.1],\n",
-       "        [3.7, 1. ],\n",
-       "        [3.9, 1.2],\n",
-       "        [5.1, 1.6],\n",
-       "        [4.5, 1.5],\n",
-       "        [4.5, 1.6],\n",
-       "        [4.7, 1.5],\n",
-       "        [4.4, 1.3],\n",
-       "        [4.1, 1.3],\n",
-       "        [4. , 1.3],\n",
-       "        [4.4, 1.2],\n",
-       "        [4.6, 1.4],\n",
-       "        [4. , 1.2],\n",
-       "        [3.3, 1. ],\n",
-       "        [4.2, 1.3],\n",
-       "        [4.2, 1.2],\n",
-       "        [4.2, 1.3],\n",
-       "        [4.3, 1.3],\n",
-       "        [3. , 1.1],\n",
-       "        [4.1, 1.3],\n",
-       "        [6. , 2.5],\n",
-       "        [5.1, 1.9],\n",
-       "        [5.9, 2.1],\n",
-       "        [5.6, 1.8],\n",
-       "        [5.8, 2.2],\n",
-       "        [6.6, 2.1],\n",
-       "        [4.5, 1.7],\n",
-       "        [6.3, 1.8],\n",
-       "        [5.8, 1.8],\n",
-       "        [6.1, 2.5],\n",
-       "        [5.1, 2. ],\n",
-       "        [5.3, 1.9],\n",
-       "        [5.5, 2.1],\n",
-       "        [5. , 2. ],\n",
-       "        [5.1, 2.4],\n",
-       "        [5.3, 2.3],\n",
-       "        [5.5, 1.8],\n",
-       "        [6.7, 2.2],\n",
-       "        [6.9, 2.3],\n",
-       "        [5. , 1.5],\n",
-       "        [5.7, 2.3],\n",
-       "        [4.9, 2. ],\n",
-       "        [6.7, 2. ],\n",
-       "        [4.9, 1.8],\n",
-       "        [5.7, 2.1],\n",
-       "        [6. , 1.8],\n",
-       "        [4.8, 1.8],\n",
-       "        [4.9, 1.8],\n",
-       "        [5.6, 2.1],\n",
-       "        [5.8, 1.6],\n",
-       "        [6.1, 1.9],\n",
-       "        [6.4, 2. ],\n",
-       "        [5.6, 2.2],\n",
-       "        [5.1, 1.5],\n",
-       "        [5.6, 1.4],\n",
-       "        [6.1, 2.3],\n",
-       "        [5.6, 2.4],\n",
-       "        [5.5, 1.8],\n",
-       "        [4.8, 1.8],\n",
-       "        [5.4, 2.1],\n",
-       "        [5.6, 2.4],\n",
-       "        [5.1, 2.3],\n",
-       "        [5.1, 1.9],\n",
-       "        [5.9, 2.3],\n",
-       "        [5.7, 2.5],\n",
-       "        [5.2, 2.3],\n",
-       "        [5. , 1.9],\n",
-       "        [5.2, 2. ],\n",
-       "        [5.4, 2.3],\n",
-       "        [5.1, 1.8]]),\n",
-       " array([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]),\n",
-       " ['(1) setosa', '(0) the others'])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "prepare_data('setosa')"
+    "코드 1-1 [3] 활성화 함수 - 단위 계단 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def step(x):\n",
+    "    return int(x >= 0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "코드 1-1 [4] 퍼셉트론 클래스 선언"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Perceptron:\n",
+    "    def __init__(self, dim, activation):\n",
+    "        rnd = np.random.default_rng()\n",
+    "        self.dim = dim\n",
+    "        self.activation = activation\n",
+    "        # 가중치(w)와 바이어스(b)를 He normal 방식으로 초기화\n",
+    "        self.w = rnd.normal(scale=np.sart(2.0 / dim), size=dim)\n",
+    "        self.b = rnd.normal(scale=np.sqrt(2.0 / dim))\n",
+    "\n",
+    "def printW(self):\n",
+    "    for i in range(self.dim):\n",
+    "        print('  w{} = {:6.3f}'.format(i+1, self.w[i]), end='')\n",
+    "    print('  b = {:6.3f}'.format(self.b))\n",
+    "\n",
+    "def predict(self, x) : # numpy 배열 x에 저장된 표본의 출력 계산\n",
+    "    return np.array([self.activation(np.dot(self.w, x[i]) + self.b) \n",
+    "                                     for i in range(len(x))])\n",
+    "\n",
+    "def fit(self, X, y, N, epochs, eta=0.01):\n",
+    "    # 학습표본의 인덱스를 무작위 순서로 섞음\n",
+    "    idx = list(range (N))\n",
+    "    np.random.shuffle(idx)\n",
+    "    X = np.array([X[idx[i]] for i in range (N)])\n",
+    "    y = np.array([y[idx[i]] for i in range (N)])\n",
+    "    f = 'Epochs = {:4d}    Loss = {:8.5f}'\n",
+    "    print('w의 초깃값 ', end='')\n",
+    "    self.printw()\n",
+    "    for j in range(epochs):\n",
+    "        for i in range(N):\n",
+    "            # x[1]에 대한 출력 오차 계산\n",
+    "            delta = self.predict([X[i]])[0] - y[i]\n",
+    "            self.w -= eta * delta * X[i]\n",
+    "            self.b -= eta * delta\n",
+    "        # 학습 과정 출력\n",
+    "        if j < 10 or (j+1) % 100 == 0:\n",
+    "            loss = self.predict(X) - y\n",
+    "            loss = (loss * loss).sum() / N\n",
+    "            print(f.format(j+1, loss), end='')\n",
+    "            self.printW()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
