코드 정리 및 재실행

--- a/01.ipynb
+++ b/01.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "    y = iris.target\n",
     "    \n",
     "    # 학습표본의 레이블 지정 - target에 지정된 레이블이면 1, 그 외는 0\n",
-    "    target_lable = np.argwhere(labels == target)\n",
+    "    target_lable = np.where(labels == target)[0]\n",
     "    y_tr = (y == target_lable).astype(int)\n",
     "    return X_tr, y_tr, ['(1) '+target, '(0) the others']"
    ]
@@ -59,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def step(x):\n",
-    "    return int(x >= 0)"
+    "    return np.heaviside(x, 1)"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,39 +86,100 @@
     "        self.dim = dim\n",
     "        self.activation = activation\n",
     "        # 가중치(w)와 바이어스(b)를 He normal 방식으로 초기화\n",
-    "        self.w = rnd.normal(scale=np.sart(2.0 / dim), size=dim)\n",
+    "        self.w = rnd.normal(scale=np.sqrt(2.0 / dim), size=dim)\n",
     "        self.b = rnd.normal(scale=np.sqrt(2.0 / dim))\n",
     "\n",
-    "def printW(self):\n",
-    "    for i in range(self.dim):\n",
-    "        print('  w{} = {:6.3f}'.format(i+1, self.w[i]), end='')\n",
-    "    print('  b = {:6.3f}'.format(self.b))\n",
+    "    def print_w(self):\n",
+    "        for i in range(self.dim):\n",
+    "            print('  w{} = {:6.3f}'.format(i+1, self.w[i]), end='')\n",
+    "        print('  b = {:6.3f}'.format(self.b))\n",
     "\n",
-    "def predict(self, x) : # numpy 배열 x에 저장된 표본의 출력 계산\n",
-    "    return np.array([self.activation(np.dot(self.w, x[i]) + self.b) \n",
-    "                                     for i in range(len(x))])\n",
+    "    def predict(self, x) : # numpy 배열 x에 저장된 표본의 출력 계산\n",
+    "        return self.activation(np.dot(x, self.w) + self.b)\n",
     "\n",
-    "def fit(self, X, y, N, epochs, eta=0.01):\n",
-    "    # 학습표본의 인덱스를 무작위 순서로 섞음\n",
-    "    idx = list(range (N))\n",
-    "    np.random.shuffle(idx)\n",
-    "    X = np.array([X[idx[i]] for i in range (N)])\n",
-    "    y = np.array([y[idx[i]] for i in range (N)])\n",
-    "    f = 'Epochs = {:4d}    Loss = {:8.5f}'\n",
-    "    print('w의 초깃값 ', end='')\n",
-    "    self.printw()\n",
-    "    for j in range(epochs):\n",
-    "        for i in range(N):\n",
-    "            # x[1]에 대한 출력 오차 계산\n",
-    "            delta = self.predict([X[i]])[0] - y[i]\n",
-    "            self.w -= eta * delta * X[i]\n",
-    "            self.b -= eta * delta\n",
-    "        # 학습 과정 출력\n",
-    "        if j < 10 or (j+1) % 100 == 0:\n",
-    "            loss = self.predict(X) - y\n",
-    "            loss = (loss * loss).sum() / N\n",
-    "            print(f.format(j+1, loss), end='')\n",
-    "            self.printW()"
+    "    def fit(self, X, y, N, epochs, eta=0.01):\n",
+    "        # 학습표본의 인덱스를 무작위 순서로 섞음\n",
+    "        random_idx = np.random.permutation(N)\n",
+    "        X = X[random_idx]\n",
+    "        y = y[random_idx]\n",
+    "        print('w의 초깃값 ', end='')\n",
+    "        self.print_w()\n",
+    "        for j in range(epochs):\n",
+    "            for i in range(N):\n",
+    "                # x[1]에 대한 출력 오차 계산\n",
+    "                delta = self.predict(X[i]) - y[i]\n",
+    "                self.w -= eta * delta * X[i]\n",
+    "                self.b -= eta * delta\n",
+    "            # 학습 과정 출력\n",
+    "            if j < 10 or (j+1) % 100 == 0:\n",
+    "                loss = self.predict(X) - y\n",
+    "                loss = (loss * loss).sum() / N\n",
+    "                print('에포크 = {:4d}    손실 = {:8.5f}'.format(j+1, loss), end='')\n",
+    "                self.print_w()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "코드 1-1 [6] 훈련 데이터 준비하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = 60\n",
+    "dim = 2\n",
+    "target = 'setosa'\n",
+    "X_tr, y_tr, labels = prepare_data(target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "코드 1-1 [7] 페셉트론 객체 생성 및 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w의 초깃값   w1 =  1.624  w2 = -0.193  b =  0.552\n",
+      "에포크 =    1    손실 =  0.16667  w1 =  1.187  w2 = -0.331  b =  0.452\n",
+      "에포크 =    2    손실 =  0.16667  w1 =  0.750  w2 = -0.469  b =  0.352\n",
+      "에포크 =    3    손실 =  0.16667  w1 =  0.313  w2 = -0.607  b =  0.252\n",
+      "에포크 =    4    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =    5    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =    6    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =    7    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =    8    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =    9    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =   10    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  100    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  200    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  300    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  400    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  500    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  600    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  700    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  800    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 =  900    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n",
+      "에포크 = 1000    손실 =  0.00000  w1 =  0.124  w2 = -0.665  b =  0.212\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = Perceptron(dim, activation=step)\n",
+    "p.fit(X_tr, y_tr, samples, epochs=1000, eta=0.01)"
    ]
   },
   {
